# ChangeLog for dev-ruby/draper
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Apr 2015; Hans de Graaff <graaff@gentoo.org> -draper-1.2.1.ebuild,
  -draper-1.3.0.ebuild:
  Cleanup.

*draper-1.4.0 (24 Sep 2014)

  24 Sep 2014; Hans de Graaff <graaff@gentoo.org> +draper-1.4.0.ebuild:
  Version bump.

  24 Sep 2014; Hans de Graaff <graaff@gentoo.org> -draper-0.18.0.ebuild:
  Cleanup.

*draper-1.3.1 (17 Jun 2014)

  17 Jun 2014; Hans de Graaff <graaff@gentoo.org> draper-1.3.0.ebuild,
  +draper-1.3.1.ebuild:
  Version bump.

*draper-1.3.0 (21 Feb 2014)

  21 Feb 2014; Hans de Graaff <graaff@gentoo.org> +draper-1.3.0.ebuild:
  Version bump.

  01 Nov 2013; Hans de Graaff <graaff@gentoo.org> -draper-0.14.0.ebuild,
  -draper-0.17.0.ebuild:
  Cleanup.

*draper-1.2.1 (28 Jun 2013)

  28 Jun 2013; Hans de Graaff <graaff@gentoo.org> +draper-1.2.1.ebuild:
  Version bump.

*draper-0.18.0 (14 Nov 2012)

  14 Nov 2012; Hans de Graaff <graaff@gentoo.org> +draper-0.18.0.ebuild:
  Version bump. Drop unsupported and now incompatible ruby18.

  10 Sep 2012; Hans de Graaff <graaff@gentoo.org> +draper-0.17.0.ebuild:
  Add 0.17.0 again, this time for ruby18 and ruby19. Skip tests failing on
  ruby18 since these do not seem to be a problem for our application in
  practice.

  03 Sep 2012; Hans de Graaff <graaff@gentoo.org> -draper-0.17.0.ebuild:
  Remove ruby19-only version of draper since we still need a ruby18 version.

*draper-0.17.0 (21 Aug 2012)

  21 Aug 2012; Hans de Graaff <graaff@gentoo.org> +draper-0.17.0.ebuild:
  Version bump. Only available for ruby19 now.

*draper-0.14.0 (05 Jul 2012)

  05 Jul 2012; Hans de Graaff <graaff@gentoo.org> +draper-0.14.0.ebuild,
  +metadata.xml:
  Initial import.
