@@ -1,2 +1,3 @@
 DIST draper-1.3.1.gem 55296 SHA256 ba6223e963b3d03240628e89919f5a6b597c60f0ae09730a1f303db0b5444b57 SHA512 6458311e652dd5838c13e051697b8ebb9983d8fc0faf1b59f1b82dee9850e9702e4b9c3059bb669491509514d51e5256b68484f519d31a2bc01061e953e9afd6 WHIRLPOOL fc85fca736ca4e26a97330dc80166e6db0b0265565b300de02ce7c6c22f36eb196ac4c2b3d4b9d8ede0667af6bd532b3f786cf7d069292603d8cacb8524257b3
 DIST draper-1.4.0.gem 55296 SHA256 5ab177184b951caf227fa538c0bd54b14394c51df67463e00bc32fe1da8d10bc SHA512 28918f5c7b990021d14867f1749a4ee8dfa4eb18c6cfdd7577c5767bac18237c4f29901dd3d5318339fddf3a68bc21963705824e7e13cda2dc03e0308c49874d WHIRLPOOL 77b290e2dcbcf95dedeb8fde98455ff9827b50ab28580f17d7a492352eb4df99dedfb994cfd591ba2b047543f67f8e4db7b30a594bd813db9cb4677b2aa49b90
+DIST draper-2.1.0.gem 56320 SHA256 1350e5d1e524b4653634370d7b742f774a47a8c2d26f44fd675ffab40df8bb71 SHA512 d3252ed0a95ec642e4a4166757e7ff0cfe116699c72be3614e4a14fb7c4407a7f93cd7338a93122f30aed3a22620fd7501364db84ebb40b5b9c2d857a9e14a5b WHIRLPOOL f3c6f43c449786a4feb5835e5ec40e6725245d3fa35fd5cccde30909aebafd3d1937b76e478bb6dfda933038acadcd85474a2818de2ccc14302f83582aa02299
