@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*draper-2.1.0 (17 Apr 2015)
+
+  17 Apr 2015; Hans de Graaff <graaff@gentoo.org> +draper-2.1.0.ebuild:
+  Version bump.
+
   17 Apr 2015; Hans de Graaff <graaff@gentoo.org> -draper-1.2.1.ebuild,
   -draper-1.3.0.ebuild:
   Cleanup.
